--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "helloworldonetest",
-  "version": "1.0.1",
-  "description": "重新写一下自己的这个项目",
+  "version": "1.0.2",
+  "description": "路由参数解析函数",
   "main": "index.js",
   "private": false,
   "scripts": {
